--- a/www/index.html
+++ b/www/index.html
@@ -2330,20 +2330,20 @@
                 if(context.width.type == opengl_dimension_types.SCREEN_SIZE)
                         $("#" + context_identifier + '_width_screen_size').prop("checked", true);
                 if(context.width.type == opengl_dimension_types.NEXT_LOWEST_POWER_OF_TWO)
-                    $("#" + context_identifier + '_width_screen_size').prop("checked", true);
+                    $("#" + context_identifier + '_width_next_lowest_power_of_two').prop("checked", true);
                 if(context.width.type == opengl_dimension_types.NEXT_HIGHEST_POWER_OF_TWO)
-                    $("#" + context_identifier + '_width_screen_size').prop("checked", true);
+                    $("#" + context_identifier + '_width_next_highest_power_of_two').prop("checked", true);
                 if(context.width.type == opengl_dimension_types.EXACT)
-                    $("#" + context_identifier + '_width_screen_size').prop("checked", true);
+                    $("#" + context_identifier + '_width_exact').prop("checked", true);
 
                 if(context.height.type == opengl_dimension_types.SCREEN_SIZE)
-                    $("#" + context_identifier + '_height_screen_size').prop("checked", true);
+                        $("#" + context_identifier + '_height_screen_size').prop("checked", true);
                 if(context.height.type == opengl_dimension_types.NEXT_LOWEST_POWER_OF_TWO)
-                    $("#" + context_identifier + '_height_screen_size').prop("checked", true);
+                    $("#" + context_identifier + '_height_next_lowest_power_of_two').prop("checked", true);
                 if(context.height.type == opengl_dimension_types.NEXT_HIGHEST_POWER_OF_TWO)
-                    $("#" + context_identifier + '_height_screen_size').prop("checked", true);
+                    $("#" + context_identifier + '_height_next_highest_power_of_two').prop("checked", true);
                 if(context.height.type == opengl_dimension_types.EXACT)
-                    $("#" + context_identifier + '_height_screen_size').prop("checked", true);
+                    $("#" + context_identifier + '_height_exact').prop("checked", true);
 
                 if ($("#" + context_identifier + '_width_exact').prop("checked"))
                         $("#" + context_identifier + "_width_exact_js_codemirror").show();
