--- a/www/index.html
+++ b/www/index.html
@@ -1940,7 +1940,7 @@
 
                 var name_prefix = "context_identifier_";
                 var context_identifier = name_prefix + new_context_index;
-
+                this.user_algorithm.contexts[i].identifier = context_identifier;
                 context.identifier = context_identifier;
 
                 html +=
