--- a/www/index.html
+++ b/www/index.html
@@ -2156,7 +2156,7 @@
                     '            <br>\n' +
                     '        </div>\n' +
                     '        <div class="col-4 col-sm-4 col-md-4 col-lg-4">\n' +
-                    '            <button type="button" id="' + context_identifier + '_duplicate" class="btn btn-outline-warning mx-auto">Duplicate Stage</button>\n' +
+                    '            <button type="button" id="' + context_identifier + '_duplicate" class="btn btn-outline-primary mx-auto">Duplicate Stage</button>\n' +
                     '            <br>\n' +
                     '        </div>\n' +
                     '    </div>\n' +
@@ -2648,7 +2648,7 @@
                             <br>
                         </div>
                         <div class="col-4 col-sm-4 col-md-4 col-lg-4">
-                            <button type="button" class="btn btn-outline-warning mx-auto">Duplicate Variable</button>
+                            <button type="button" class="btn btn-outline-primary mx-auto">Duplicate Variable</button>
                             <br>
                         </div>
                     </div>
@@ -2710,7 +2710,7 @@
                         <br>
                     </div>
                     <div class="col-4 col-sm-4 col-md-4 col-lg-4">
-                        <button type="button" class="btn btn-outline-warning mx-auto">Duplicate Program</button>
+                        <button type="button" class="btn btn-outline-primary mx-auto">Duplicate Program</button>
                         <br>
                     </div>
                 </div>
@@ -2955,7 +2955,7 @@
                         <br>
                     </div>
                     <div class="col-4 col-sm-4 col-md-4 col-lg-4">
-                        <button type="button" class="btn btn-outline-warning mx-auto">Duplicate Stage</button>
+                        <button type="button" class="btn btn-outline-primary mx-auto">Duplicate Stage</button>
                         <br>
                     </div>
                 </div>
