--- a/www/index.html
+++ b/www/index.html
@@ -1956,7 +1956,7 @@
                             }
                         }
                     }
-                })(this, [checkboxes, i])
+                })(checkboxes, i)
             }
         }
 
