--- a/www/index.html
+++ b/www/index.html
@@ -2185,11 +2185,11 @@
                     '\n' +
                     '    <div class="row">\n' +
                     '        <div class="col-6 col-sm-6 col-md-6 col-lg-6">\n' +
-                    '            <button type="button" id="' + context_identifier + '_move_up" class="btn btn-outline-warning mx-auto">Move Context Up</button>\n' +
+                    '            <button type="button" ' + (i == 0 ? "disabled" : "") + ' id="' + context_identifier + '_move_up" class="btn btn-outline-warning mx-auto">Move Context Up</button>\n' +
                     '            <br>\n' +
                     '        </div>\n' +
                     '        <div class="col-6 col-sm-6 col-md-6 col-lg-6">\n' +
-                    '            <button type="button" id="' + context_identifier + '_move_down" class="btn btn-outline-warning mx-auto">Move Context Down</button>\n' +
+                    '            <button type="button" ' + (i == contexts.length-1 ? "disabled" : "") + ' id="' + context_identifier + '_move_down" class="btn btn-outline-warning mx-auto">Move Context Down</button>\n' +
                     '            <br>\n' +
                     '        </div>\n' +
                     '    </div>\n' +
